# LSTM-from-scratch

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  SrpskaImena.csv  install-systemc.sh  lstm.ipynb  lstm.py  lstm_custom.py  lstm_lib.py  lstm_names.ipynb  lstm_shakespeare.py  matrix.cpp  matrix.hpp  matrix.py  test_matrix.py  the_sopranos_pilot.txt  the_sopranos_pilot_small.txt
cpp/: .clang-format  CMakeLists.txt  lstm.cpp  lstm.hpp  main.cpp  profile_valgrind.sh  profiler.hpp
cpp/matrix/: matrix.cpp  matrix.hpp  matrix_test.cpp
cpp/model/: lstm.json
datasets/shakespeare/: tiny_shakespeare_small.txt
datasets/sopranos/: the_sopranos_pilot_small.txt
python/: lstm.ipynb  lstm.py  lstm_lib.py  reqs.txt  test_matrix.py
python/weights/: lstm_weights.json
references/: lstm-neural-network-from-scratch.ipynb
systemc-hello/: Makefile  hello.cpp
weights/: lstm_weights.json
